--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,42 +1,40 @@
-name: Build and Push
+name: Build and push
 
 on:
-  push:
-    branches:
-      - master
   workflow_dispatch:
-   
-env:
-  # Change these values if you have forked it for your own works
-  # Use Lowercase vaue of your Username
-  GITHUB_USERNAME: orkunergun
-  GITHUB_EMAIL: hesaphesapyus@gmail.com
-
-  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
-  # Image name and tag. MUST be lowercase
-  IMAGE_NAME: docker
-  IMAGE_TAG: ubuntu
+    branches: [ master ]
 
 jobs:
-  push:
-    runs-on: ubuntu-latest
 
+  build:
+    runs-on: ubuntu-latest
+    environment: Actions
     steps:
-      - name: Checkout
+    
+      - name: Check Out Repo 
         uses: actions/checkout@v2
 
-      - name: Configuring git
-        run: |
-          git config --global user.name $GITHUB_USERNAME
-          git config --global user.email $GITHUB_EMAIL
-      - name: Logging in to Docker
-        run: |
-          echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_USERNAME --password-stdin
-      - name: Building the Image
-        run: |
-          docker build -t ghcr.io/${GITHUB_USERNAME}/${IMAGE_NAME}:${IMAGE_TAG} .
-          echo "Build Completed Successfully!"
-      - name: Pushing the Image
-        run: |
-          docker push ghcr.io/${GITHUB_USERNAME}/${IMAGE_NAME}:${IMAGE_TAG}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: orkunergun
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: orkunergun/docker:ubuntu
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
